--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: basic_flutter_tdd
+name: flutter_demo_improved
 
 description: >-
   A better version of the Flutter Demo.
@@ -11,15 +11,15 @@ environment:
   sdk: ">=2.5.1 <3.0.0"
   flutter: ^1.12.0
 
-dependencies:
-  flutter:
-    sdk: flutter
-  cupertino_icons: ^0.1.2
-  provider: ^4.0.4
+flutter:
+  uses-material-design: true
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-flutter:
-  uses-material-design: true
+dependencies:
+  flutter:
+    sdk: flutter
+  cupertino_icons: ^0.1.2
+  provider: ^4.0.4
