--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: >-
   It features: better tests, more organized structure, state management with the
   Provider package.
 
-version: 1.0.0+1
+version: 1.0.3
 
 environment:
   sdk: ">=2.5.1 <3.0.0"
