--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ dart_task:
 
 # install:
 #   - git clone https://github.com/flutter/flutter.git -b stable
-#   - ./flutter/bin/flutter doctor
-
-# script:
-#   - ./flutter/bin/flutter test
+# #   - ./flutter/bin/flutter doctor
 
 script:
-  - flutter test
+  - ./flutter/bin/flutter test
+
+# script:
+#   - flutter test
