moving flutter doctor to be a recurrent task and not part of the installation process

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   # - ./flutter/bin/flutter doctor
 
 script:
+  - ./flutter/bin/flutter doctor
   - ./flutter/bin/flutter test
 
 # script:
