--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  - FLUTTER_GITHUB_ADDRESS="https://github.com/flutter/flutter.git"
+
 language: dart
 
 dart:
@@ -6,20 +9,9 @@ dart:
 dart_task:
   - dartfmt
 
-# dist: trusty
-
-# addons:
-#   apt:
-#     packages:
-#       - lib32stdc++6
-
 install:
-  - git clone https://github.com/flutter/flutter.git -b stable
-  # - ./flutter/bin/flutter doctor
+  - git clone $FLUTTER_GITHUB_ADDRESS -b stable
 
 script:
   - ./flutter/bin/flutter doctor
   - ./flutter/bin/flutter test
-
-# script:
-#   - flutter test
