--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
   pedantic: ^1.8.0
 
 dependencies:
