--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,8 @@ name: flutter_demo_improved
 description: >-
   A better version of the Flutter Demo.
   It features: more organized structure; unit, widget and integration tests; 
-  state management with the Provider package; and CI with Travis.
+  simple performance profiling; state management with the Provider package; and 
+  CI with Travis.
 
 version: 1.0.3
 
