added a comment about how to analyze the performance results to the README | added flutter drive to travis to see if it works

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ install:
 script:
   - ./flutter/bin/flutter doctor
   - ./flutter/bin/flutter test
+  - ./flutter/bin/flutter drive --target=test_driver/app.dart
