trying to parameterize flutter's path inside travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
   - git clone $FLUTTER_GITHUB -b stable
 
 script:
-  - $FLUTTER_PATH/flutter doctor
-  - $FLUTTER_PATH/flutter test
+  - ${FLUTTER_PATH}/flutter doctor
+  - ${FLUTTER_PATH}/flutter test
