--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,15 @@ install:
 script:
   - ./flutter/bin/flutter doctor
   - ./flutter/bin/flutter test
+
+jobs:
+  include:
+    - name: "Android tests"
+      os: linux
+      dist: trusty
+      language: android
+      android:
+        components:
+          - build-tools-28.0.3
+          - android-28
+      script: ./flutter/bin/flutter drive --target=test_driver/app.dart
