--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,31 @@ dart:
 dart_task:
   - dartfmt
 
-install:
-  - git clone $FLUTTER_GITHUB -b stable
-
-script:
-  - ./flutter/bin/flutter doctor
-  - ./flutter/bin/flutter test
+# install:
+#   - git clone $FLUTTER_GITHUB -b stable
 
 jobs:
   include:
-    - name: "Android tests"
-      os: linux
-      dist: trusty
-      language: android
-      android:
-        components:
-          - build-tools-28.0.3
-          - android-28
-      script: ./flutter/bin/flutter drive --target=test_driver/app.dart
+    - stage: Flutter Test
+    language: generic
+    os: linux
+    install: git clone $FLUTTER_GITHUB -b stable
+    before_script:
+      - ./flutter/bin/flutter doctor
+    script: ./flutter/bin/flutter test
+
+# script:
+#   - ./flutter/bin/flutter doctor
+#   - ./flutter/bin/flutter test
+
+# jobs:
+#   include:
+#     - name: "Android tests"
+#       os: linux
+#       dist: trusty
+#       language: android
+#       android:
+#         components:
+#           - build-tools-28.0.3
+#           - android-28
+#       script: ./flutter/bin/flutter drive --target=test_driver/app.dart
