slightly better noting

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,14 @@ dart_task:
 jobs:
   include:
     - stage: Flutter Test
-      language: generic
+      language: dart
       os: linux
       install: git clone $FLUTTER_GITHUB -b stable
       before_script:
         - ./flutter/bin/flutter doctor
-      script: ./flutter/bin/flutter test
+      script: 
+        - ./flutter/bin/flutter test
+      
 
 # script:
 #   - ./flutter/bin/flutter doctor
