--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@ dart:
 dart_task:
   - dartfmt
 
-# install:
-#   - git clone $FLUTTER_GITHUB -b stable
-
 jobs:
   include:
     - stage: Flutter Test
@@ -22,32 +19,15 @@ jobs:
         - ./flutter/bin/flutter doctor
       script: 
         - ./flutter/bin/flutter test
-    - stage: Integration Test on Android
-      os: linux
-      dist: trusty
-      language: android
-      android:
-        components:
-          - build-tools-28.0.3
-          - android-28
-      install: git clone $FLUTTER_GITHUB -b stable
-      before_script:
-        - ./flutter/bin/flutter doctor
-      script: ./flutter/bin/flutter drive --target=test_driver/app.dart
-      
-
-# script:
-#   - ./flutter/bin/flutter doctor
-#   - ./flutter/bin/flutter test
-
-# jobs:
-#   include:
-#     - name: "Android tests"
-#       os: linux
-#       dist: trusty
-#       language: android
-#       android:
-#         components:
-#           - build-tools-28.0.3
-#           - android-28
-#       script: ./flutter/bin/flutter drive --target=test_driver/app.dart
+    # - stage: Integration Test on Android
+    #   os: linux
+    #   dist: trusty
+    #   language: android
+    #   android:
+    #     components:
+    #       - build-tools-28.0.3
+    #       - android-28
+    #   install: git clone $FLUTTER_GITHUB -b stable
+    #   before_script:
+    #     - ./flutter/bin/flutter doctor
+    #   script: ./flutter/bin/flutter drive --target=test_driver/app.dart
