--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,16 @@
 env:
   - FLUTTER_GITHUB="https://github.com/flutter/flutter.git"
 
-language: dart
-
-dart:
-  - stable
-
-dart_task:
-  - dartfmt
-
 jobs:
   include:
+    - stage: Code Formatting
+      language: dart
+      dart: stable
+      dart_task: dartfmt
+      
     - stage: Flutter Test
       language: dart
       os: linux
       install: git clone $FLUTTER_GITHUB -b stable
-      before_script:
-        - ./flutter/bin/flutter doctor
-      script: 
-        - ./flutter/bin/flutter test
+      before_script: ./flutter/bin/flutter doctor
+      script: ./flutter/bin/flutter test
